[package]
name = "ufc"
version = "0.1.0"
authors = ["Joeky <joeky5888@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
clap = "2.33.3"
ctrlc = "3.1.9"
termcolor = "1.1"
fancy-regex = "0.5.0"
lazy_static = "1.4.0"