[package]
name = "ufc"
version = "0.8.5"
authors = ["The UFC Team <https://github.com/ufc-cli/ufc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", rev = "92f744c" }
clap_generate = { git = "https://github.com/clap-rs/clap", rev = "92f744c" }
ctrlc = "3.1.9"
termcolor = "1.1"
fancy-regex = "0.5.0"
lazy_static = "1.4.0"
atty = "0.2"